tests/basic/infer/eq/090.pan
eq : (a:â„¤) â†’ (b:â„¤) â†’ { c:ğ”¹ | c = true âŸº a = b }
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f90 = 
  let p = eq 1 2 in 
  assert p

f91 = 
  let x = 1 in
  let p = eq x 2 in 
  assert p

